@@ -7,6 +7,7 @@
  - implemented tablesorter in list of registrations (goffy)
  - fixed bug in blocks (cronywell/goffy)
  - implemented mail handling by task list (goffy)
+ - implemented cron job (goffy)
 
 ==============================================================
 1.0.1 [2022/01/31]
